--- a/Proxy/Proxy.csproj
+++ b/Proxy/Proxy.csproj
@@ -4,7 +4,15 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <IsAotCompatible>true</IsAotCompatible>
+        <WarningsAsErrors>true</WarningsAsErrors>
+        <EnableMicrosoftExtensionsConfigurationBinderSourceGenerator>true</EnableMicrosoftExtensionsConfigurationBinderSourceGenerator>
+        <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
         <GenerateMvcApplicationPartsAssemblyAttributes>false</GenerateMvcApplicationPartsAssemblyAttributes>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
 </Project>
